# IPLists.py

./: .gitignore  .gitlab-ci.yml  ReadMe.md  pyproject.toml
IPLists/: __init__.py  __main__.py  core.py  optimize.py
IPLists/backends/: __init__.py  amazon.py  cidr.py  ipfilter.py  p2p.py
IPLists/utils/: __init__.py
examples/: composeIpFilter.py
tests/: tests.py
