[build-system]
requires = ["setuptools>=61.2.0", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "IPLists"
readme = "ReadMe.md"
description = "A converter between various formats of IP lists."
authors = [{name = "KOLANICH"}]
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["IPLists"]
license = {text = "Unlicense"}
requires-python = ">=3.4"
dynamic = ["version"]
dependencies = [
	"plumbum",
]

[project.scripts]
IPLists = "IPLists.__main__:CLI.run"

[project.urls]
Homepage = "https://codeberg.org/KOLANICH-libs/IPLists.py"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
include = ["IPLists", "IPLists.*"]

[tool.setuptools_scm]

[tool.black]
line-length = 100500

